deployment/dev/ml/ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-dev
  namespace: default
  labels:
    app: ml-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-dev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ml-dev
    spec:
      containers:
        - image: prefecthq/prefect:2.15.0-python3.10
          imagePullPolicy: Always
          name: prefect-server
          command: ["/opt/prefect/entrypoint.sh", "prefect", "server", "start"]
          volumeMounts:
            - mountPath: /root/.prefect
              name: vol-ml-prefect
        - image: postgres:15.3-bullseye
          imagePullPolicy: Always
          name: postgres
        - image: dbeaver/cloudbeaver:23.3.1
          imagePullPolicy: Always
          name: cloudbeaver
        - image: mailhog/mailhog:v1.0.1
          imagePullPolicy: Always
          name: mailhog  
        - image: minio/minio:RELEASE.2024-10-29T16-01-48Z
          imagePullPolicy: Always
          name: minio  
          workingDir: /data
          ports:
            - containerPort: 9001
            - containerPort: 9000
          args:
            - server
            - --console-address
            - :9001
            - --address
            - :9000
            - /data
      restartPolicy: Always
      volumes:
        - name: vol-ml-prefect
          persistentVolumeClaim:
            claimName: vol-ml-prefect
