deployment/dev/ml/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-dev
  namespace: default
  labels:
    app: ml-dev
spec:
  selector:
    app: ml-dev
  type: LoadBalancer
  ports:
    - name: port-4200
      protocol: TCP
      port: 4200
      targetPort: 4200
    - name: port-5432
      protocol: TCP
      port: 5432
      targetPort: 5432
    - name: port-8978
      protocol: TCP
      port: 8978
      targetPort: 8978
    - name: port-9000
      protocol: TCP
      port: 9000
      targetPort: 9000
    - name: port-9001
      protocol: TCP
      port: 9001
      targetPort: 9001
    - name: port-1025
      protocol: TCP
      port: 1025
      targetPort: 1025
    - name: port-8025
      protocol: TCP
      port: 8025
      targetPort: 8025
